utilities/dataOrganization/flywheel/logs/fw_download.16935156.err
Traceback (most recent call last):
  File "download_from_flywheel.py", line 10, in <module>
    from studies_template import studies_template, studies_rules
  File "/oak/stanford/groups/menon/scsnlscripts/utilities/dataOrganization/flywheel/scripts/studies_template.py", line 50
    '3D_volume_structural':[['.dicom','anatomical/*']],
                         ^
SyntaxError: invalid syntax
